try new 100vw to fix white bar on right on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,12 @@
 .programming,
 .sign-up {
   display: flex;
-  height: 90vh;
+  height: 100vh;
+  width: 100vw;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
+  margin-top: -80px;
 }
 
 .webdev {
